[release] Evergon v0.1 - Engine Core

--- a/nginx/portable/conf/vhosts/testapp.test.conf
+++ b/nginx/portable/conf/vhosts/testapp.test.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name testapp.test;
 
-    root /home/azdhar/evergon/www/testapp/public;
+    root /.../public;
     index index.php index.html index.htm;
 
     access_log  logs/testapp.test.access.log;
